--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^2.1.0",
+    "@types/react": "~18.2.14",
+    "axios": "^1.6.7",
     "expo": "~49.0.15",
     "expo-build-properties": "~0.8.3",
     "expo-dev-client": "~2.4.12",
@@ -22,10 +25,16 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-swiper-flatlist": "^3.2.3",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "^3.3.2"
+    "react-redux": "^9.1.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
