--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,12 +19,12 @@
     <activity 
     android:name=".MainActivity" 
     android:label="@string/app_name" 
-    android:screenOrientation="landscape"
     android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode" 
     android:launchMode="singleTask" 
     android:windowSoftInputMode="adjustResize" 
     android:theme="@style/Theme.App.SplashScreen" 
     android:exported="true" 
+    android:screenOrientation="portrait"
     >
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
